--- a/style/style.css
+++ b/style/style.css
@@ -14,36 +14,14 @@
 
     /* Estilos para el mensaje de acceso */
     #access-message {
-        text-align: center;
-        font-size: 12px;
       position: fixed;
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
       background: white;
-      border-radius: 10px;
-      color: #009BC9;
       padding: 20px;
-      display: none;
+      border: 1px solid black;
+      display: none; /* Comienza oculto */
+      z-index: 20; /* Asegúrate de que esté por encima del logo */
     }
-    .buttons{
-        display: flex;
-        justify-content: center;
-        gap: 20px;
-    }
-    #allow-button{
-        
-        background-color: #144A8A;
-        color: white;
-        border-radius: 25px;
-        text-align: center;
-        padding: 10px;
-    }
-    #deny-button{
-        
-        background-color: #144A8A;
-        color: white;
-        border-radius: 25px;
-        text-align: center;
-        padding: 10px;
-    }
+  
