--- a/style/style.css
+++ b/style/style.css
@@ -1,27 +1,48 @@
+body {
+    font-family: 'Roboto', sans-serif;
+    /* Aplicar la fuente Roboto */
+}
 
-    body {
-      font-family: 'Roboto', sans-serif; /* Aplicar la fuente Roboto */
-    }
+/* Estilos para el logo */
+#logo {
+    position: fixed;
+    top: 20px;
+    /* Ajusta la posición según sea necesario */
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 10;
+    /* Asegúrate de que esté por encima de otros elementos */
+}
 
-    /* Estilos para el logo */
-    #logo {
-      position: fixed;
-      top: 20px; /* Ajusta la posición según sea necesario */
-      left: 50%;
-      transform: translateX(-50%);
-      z-index: 10; /* Asegúrate de que esté por encima de otros elementos */
-    }
-
-    /* Estilos para el mensaje de acceso */
-    #access-message {
-      position: fixed;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      background: white;
-      padding: 20px;
-      border: 1px solid black;
-      display: none; /* Comienza oculto */
-      z-index: 20; /* Asegúrate de que esté por encima del logo */
-    }
-  
+/* Estilos para el mensaje de acceso */
+#access-message {
+    border-radius: 15px;
+    border: none;
+    text-align: center;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: white;
+    color: #009BC9;
+    font-size: 12px;
+    padding: 20px;
+    display: none;
+    /* Comienza oculto */
+    z-index: 20;
+    /* Asegúrate de que esté por encima del logo */
+}
+#allow-button{
+    background-color: #144A8A;
+    padding: 10px;
+    color: white;
+    border: none;
+    border-radius: 10px;
+}
+#deny-button{
+    background-color: #144A8A;
+    padding: 10px;
+    color: white;
+    border: none;
+    border-radius: 10px;
+}
